界面优化以及收入报表增加查看详细功能

--- a/app/src/main/res/layout/activity_price_loss_management.xml
+++ b/app/src/main/res/layout/activity_price_loss_management.xml
@@ -11,6 +11,13 @@
         android:layout_height="50dp"
         android:background="@color/yu">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
+            app:srcCompat="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
