--- a/app/src/main/res/layout/item_income_record.xml
+++ b/app/src/main/res/layout/item_income_record.xml
@@ -6,30 +6,58 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/tvProductName"
+    <LinearLayout
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1">
+        <TextView
+            android:id="@+id/tvProductName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tvProductNum"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textSize="16sp"
+            android:layout_marginEnd="16dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp" />
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/tvProductNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginEnd="16dp"/>
+        <TextView
+            android:id="@+id/tvTotalIncome"
+            android:layout_width="44dp"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/tvTotalIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tvAccountReceivable"
+            android:layout_width="44dp"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginStart="16dp" />
 
-    <TextView
-        android:id="@+id/tvAccountReceivable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginStart="16dp"/>
+        <LinearLayout
+            android:layout_width="38dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp">
+            <ImageView
+                android:id="@+id/ivInfo"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:gravity="center_horizontal"
+                android:src="@drawable/information"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="产品详情"/>
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
