--- a/app/src/main/res/layout/item_expense_record.xml
+++ b/app/src/main/res/layout/item_expense_record.xml
@@ -1,31 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="12dp">
 
-    <TextView
-        android:id="@+id/tvProductName"
-        android:layout_width="0dp"
+    <!-- 原有内容 -->
+    <LinearLayout
+        android:id="@+id/content_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="产品名称"
-        android:textSize="16sp" />
+        android:layout_toStartOf="@+id/ivInfo"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvProductNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="批号"
-        android:textSize="16sp"
-        android:layout_marginEnd="16dp" />
+        <TextView
+            android:id="@+id/tvProductName"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
 
-    <TextView
-        android:id="@+id/tvTotalExpense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="支出"
-        android:textSize="16sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvProductNum"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/tvTotalExpense"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/tvFreight"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
+    </LinearLayout>
+
+    <!-- 新增信息图标 -->
+    <ImageView
+        android:id="@+id/ivInfo"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:src="@drawable/information"
+        android:background="?attr/selectableItemBackgroundBorderless"/>
+
+</RelativeLayout>
