--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/yu"
+        android:background="@color/primary_green"
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabTextAppearance="@style/CustomTabTextAppearance"
