--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,16 @@
 
     <color name="white_80">#CCFFFFFF</color>
     <color name="weather_blue">#2196F3</color>
+
+
+    <color name="primary_green">#919f7d</color>
+    <color name="light_green">#E8F5E9</color>
+
+    <color name="light_background">#FAFAFA</color>
+    <color name="text_primary">#333333</color>
+    <color name="card_background">#FFFFFF</color>
+    <color name="card_stroke">#20000000</color>
+    <color name="warning_background">#FFF3E0</color>
+    <color name="warning_text">#EF6C00</color>
+    <color name="warning_icon">#F57C00</color>
 </resources>
