--- a/app/src/main/res/layout/activity_expense_report.xml
+++ b/app/src/main/res/layout/activity_expense_report.xml
@@ -99,45 +99,55 @@
         android:background="#e0e0e0"
         android:padding="8dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="产品名称"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="产品名称"
+                android:textStyle="bold"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="批号"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="批号"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="支出"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:layout_weight="1">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="运费"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="44dp"
+                android:layout_height="wrap_content"
+                android:text="支出"
+                android:textStyle="bold"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="详细"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="44dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="运费"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="38dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="详细"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <!-- 列表 -->
