--- a/app/src/main/res/layout/activity_income_report.xml
+++ b/app/src/main/res/layout/activity_income_report.xml
@@ -115,7 +115,7 @@
                 android:textSize="16sp" />
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="批号"
                 android:textSize="16sp"
@@ -148,8 +148,7 @@
                 android:layout_marginStart="16dp"
                 android:text="详细"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginEnd="8dp"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
